# WebAppCppSdl2Free

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux.yml  macos.yml
assets/: assetfile1  assetfile2
cmake/: tmplt-emscripten.cmake
include/Engine/: Engine.hpp
src/: Engine.cpp
standalone/: CMakeLists.txt
standalone/src/: AppCore.hpp  Main.cpp
standalone/tests/: CMakeLists.txt  LibTester.cpp
